# cmake-course

module1/: add.cpp  main.cpp  print_result.cpp
module2/: CMakeLists.txt  divide.cpp
module3/: CMakeLists.txt
module3/my_math/: CMakeLists.txt
module3/my_math/src/: divide.cpp
module4/: CMakeLists.txt
module5/: CMakeLists.txt
module6/: CMakeLists.txt  main.cpp
module6/my_math/src/: add.cpp
module6/my_print/include/my_print/: print_result.h
module7/: CMakeLists.txt
module7/my_math/: CMakeLists.txt
module7/my_math/include/my_math/: divide.h
module7/my_print/src/: print_result.cpp
module7_test/: CMakeLists.txt  main.cpp
module9/App_OpenCV/: CMakeLists.txt  main.cpp
module9/GTK_PC/: CMakeLists.txt  main.cpp
module9/find_funcs/: CMakeLists.txt
